<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailDataBaruActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:paddingRight="5dp"
            android:paddingLeft="11dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.429">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ahli Waris :"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_margin="5dp"
                android:id="@+id/nik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0978867896"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kk"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0978867896"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nik"
                app:layout_constraintVertical_bias="0.105" />

            <TextView
                android:id="@+id/nama"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ibnu"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kk"
                app:layout_constraintVertical_bias="0.119" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            tools:layout_editor_absoluteX="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="50dp">

        <TextView
            android:id="@+id/ktp_meninggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ktp_meninggal"
            android:textSize="15sp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_Ktp_Meninggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg"
            app:layout_constraintTop_toBottomOf="@id/ktp_meninggal" />

        <TextView
            android:id="@+id/kk_meninggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="16dp"
            android:text="@string/kk_meninggal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_kk_meninggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg"
            app:layout_constraintTop_toBottomOf="@id/kk_meninggal" />

        <TextView
            android:id="@+id/jamkesmas"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/jamkesmas" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_jamkesmas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg"
            app:layout_constraintTop_toBottomOf="@id/kk_meninggal" />

        <TextView
            android:id="@+id/ktp_waris"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ktp_ahli_waris" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_ktp_waris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg"
            app:layout_constraintTop_toBottomOf="@id/kk_meninggal" />

        <TextView
            android:id="@+id/kk_waris"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kk_ahli_waris" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_kk_waris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg" />

        <TextView
            android:id="@+id/akta_kematian"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/akta_kematian" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_Akta_kematian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg"
            app:layout_constraintTop_toBottomOf="@id/kk_meninggal" />

        <TextView
            android:id="@+id/pernyataan_waris"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/surat_pernyataan_waris" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_pernyataan_waris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg"
            app:layout_constraintTop_toBottomOf="@id/kk_meninggal" />

        <TextView
            android:id="@+id/integritas_waris"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pakta_integritas_ahli_waris" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#E4E1E1"
                android:layout_margin="10dp"/>


        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img_integritas_waris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/inputimg"
            app:layout_constraintTop_toBottomOf="@id/kk_meninggal" />

            <EditText
                android:hint="@string/keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnYes"
                    android:text="@string/terima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
                <Button
                    android:id="@+id/btnNo"
                    android:text="@string/tolak"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>